--- a/charts/attestation-api/values-prod.yaml
+++ b/charts/attestation-api/values-prod.yaml
@@ -9,10 +9,10 @@ cronJob:
 env:
   PORT: 8080
   MON_PORT: 8888
-  CLICKHOUSE_HOST: clickhouse-ck-prod-dimo-clickhouse.prod.svc.cluster.local
   TOKEN_EXCHANGE_JWK_KEY_SET_URL: http://dex-roles-rights-prod.prod.svc.cluster.local:5556
   TOKEN_EXCHANGE_ISSUER_URL: "https://auth-roles-rights.dimo.zone"
   VEHICLE_NFT_ADDRESS: "0xbA5738a18d83D41847dfFbDC6101d37C69c9B0cF"
+  DEFINITIONS_GRPC_ADDR: device-definitions-api-prod:8086
 ingress:
   enabled: true
   className: nginx
