--- a/charts/attestation-api/values.yaml
+++ b/charts/attestation-api/values.yaml
@@ -26,13 +26,12 @@ cronJob:
 env:
   PORT: 8080
   MON_PORT: 8888
-  CLICKHOUSE_HOST: clickhouse-ck-dev-dimo-clickhouse.dev.svc.cluster.local
-  CLICKHOUSE_TCP_PORT: 9000
-  CLICKHOUSE_USER: clickhouse-user
-  CLICKHOUSE_DATABASE: dimo
+  CLICKHOUSE_TCP_PORT: 9440
+  CLICKHOUSE_DATABASE: file_index
   TOKEN_EXCHANGE_JWK_KEY_SET_URL: http://dex-roles-rights.dev.svc.cluster.local:5556/keys
   TOKEN_EXCHANGE_ISSUER_URL: https://auth-roles-rights.dev.dimo.zone
   VEHICLE_NFT_ADDRESS: "0x90c4d6113ec88dd4bdf12f26db2b3998fd13a144"
+  DEFINITIONS_GRPC_ADDR: "device-definitions-api-dev:8086"
 service:
   type: ClusterIP
   ports:
