Update settings and values

--- a/charts/attestation-api/templates/secret.yaml
+++ b/charts/attestation-api/templates/secret.yaml
@@ -23,6 +23,9 @@ spec:
   - remoteRef:
       key: {{ .Release.Namespace }}/attestation/vin_vc/issuer_private_key
     secretKey: VIN_ISSUER_PRIVATE_KEY
+  - remoteRef:
+      key: {{ .Release.Namespace }}/attestation/vin_vc/revoked_token_ids
+    secretKey: REVOKED_TOKEN_IDS
   secretStoreRef:
     kind: ClusterSecretStore
     name: aws-secretsmanager-secret-store
