--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,11 +2,16 @@ name: golangci-lint
 on:
   pull_request:
     branches: ["**"]
+  push:
+    branches:
+      - main
 env:
   GOPRIVATE: github.com/DIMO-Network
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   golangci:
+    # Condition to skip merge commits
+    if: "!contains(github.event.head_commit.message, 'Merge pull request')"
     runs-on: self-hosted
 
     name: lint
