--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,24 +3,30 @@ name: gotest
 on:
   pull_request:
     branches: ["**"]
+  push:
+    branches:
+      - main
+env:
+  GOPRIVATE: github.com/DIMO-Network
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
 
 jobs:
   tests:
+    # Condition to skip merge commits
+    if: "!contains(github.event.head_commit.message, 'Merge pull request')"
     runs-on: self-hosted
 
     steps:
       - name: Install Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v
         with:
           go-version: 1.22
 
       - name: Checkout code
         uses: actions/checkout@v4
 
-
       - name: modVerify
         run: go mod verify
 
       - name: Run Tests with go testsum
         run: make test
-
