add platform to dev push

--- a/.github/workflows/buildpushdev.yml
+++ b/.github/workflows/buildpushdev.yml
@@ -29,6 +29,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          platforms: linux/amd64
           tags: dimozone/attestation-api:${{ steps.slug.outputs.sha7 }}, dimozone/attestation-api:latest
 
       - name: Update Image Version in the worker HelmChart values.yaml
