--- a/charts/attestation-api/values-prod.yaml
+++ b/charts/attestation-api/values-prod.yaml
@@ -17,6 +17,7 @@ env:
   IDENTITY_API_URL: https://identity-api.dimo.zone
   FINGERPRINT_BUCKET: dimo-network-fingerprint-prod
   VINVC_BUCKET: dimo-network-vinvc-prod
+  POMVC_BUCKET: dimo-network-pomvc-prod
   DIMO_REGISTRY_CHAIN_ID: 137
 ingress:
   enabled: true
