--- a/charts/attestation-api/values.yaml
+++ b/charts/attestation-api/values.yaml
@@ -38,6 +38,8 @@ env:
   FINGERPRINT_DATA_TYPE: FP_v0.0.1
   VINVC_BUCKET: dimo-network-vinvc-dev
   VINVC_DATA_TYPE: VINVCv0.0
+  POMVC_BUCKET: dimo-network-pomvc-dev
+  POMVC_DATA_TYPE: POMVCv0.1
   S3_AWS_REGION: us-east-2
   DIMO_REGISTRY_CHAIN_ID: 80002
 service:
