--- a/charts/attestation-api/values-prod.yaml
+++ b/charts/attestation-api/values-prod.yaml
@@ -16,6 +16,9 @@ env:
   TELEMETRY_URL: http://telemetry-api.dimo.zone
   IDENTITY_API_URL: https://identity-api.dimo.zone
   FINGERPRINT_BUCKET: dimo-network-fingerprint-prod
+  AUTOPI_BUCKET_NAME: "dimo-network-connectivity-prod"
+  HASHDOG_BUCKET_NAME: "dimo-network-connectivity-prod"
+  STATUS_BUCKET_NAME: "dimo-network-status-prod"
   VINVC_BUCKET: dimo-network-vinvc-prod
   POMVC_BUCKET: dimo-network-pomvc-prod
   DIMO_REGISTRY_CHAIN_ID: 137
