--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -16,13 +16,10 @@ jobs:
 
     name: lint
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          go-version: 1.22
-
-      - name: Checkout code
-        uses: actions/checkout@v4
+          go-version-file: 'go.mod'
 
       - name: go mod tidy
         run: go mod tidy
