--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,16 +10,13 @@ on:
 jobs:
   tests:
     if: "!contains(github.event.head_commit.message, 'Merge pull request')"
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          go-version: 1.22
-
-      - name: Checkout code
-        uses: actions/checkout@v4
+          go-version-file: 'go.mod'
 
       - name: modVerify
         run: go mod verify
