--- a/charts/attestation-api/values.yaml
+++ b/charts/attestation-api/values.yaml
@@ -35,8 +35,8 @@ env:
   VEHICLE_NFT_ADDRESS: '0x45fbCD3ef7361d156e8b16F5538AE36DEdf61Da8'
   AFTERMARKET_NFT_ADDRESS: '0x325b45949C833986bC98e98a49F3CA5C5c4643B5'
   SYNTHETIC_NFT_ADDRESS: '0x78513c8CB4D6B6079f813850376bc9c7fc8aE67f'
-  TELEMETRY_URL: http://telemetry-api.dev.dimo.zone
-  IDENTITY_API_URL: https://identity-api.dev.dimo.zone
+  TELEMETRY_URL: https://telemetry-api.dev.dimo.zone
+  IDENTITY_API_URL: http://identity-api-dev:8080
   FINGERPRINT_BUCKET: dimo-network-fingerprint-dev
   FINGERPRINT_DATA_TYPE: FP_v0.0.1
   AUTOPI_DATA_TYPE: Twilio_1.0
