refactor: Move VIN VC to attestation in DIS
- Make VIN VC vin attestations without VC proof and JSON-LD
- Update behavior to always create a new attestation when requested
- Move VC types from pkg/verifiable to internal/models
- Add DEX, FetchAPI, and token cache client services

--- a/charts/attestation-api/values-prod.yaml
+++ b/charts/attestation-api/values-prod.yaml
@@ -24,6 +24,7 @@ env:
   VC_BUCKET: dimo-ingest-cloudevent-prod
   CLOUDEVENT_BUCKET: dimo-ingest-cloudevent-prod
   DIMO_REGISTRY_CHAIN_ID: 137
+  FETCH_GRPC_ADDR: fetch-api-prod:8086
 ingress:
   enabled: true
   className: nginx
