update env vars

--- a/charts/attestation-api/templates/secret.yaml
+++ b/charts/attestation-api/templates/secret.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   data:
   - remoteRef:
+      key: {{ .Release.Namespace }}/attestation/dinc-storage-node/signer-private-key
+    secretKey: SIGNER_PRIVATE_KEY
+  - remoteRef:
       key: {{ .Release.Namespace }}/attestation/clickhouse/host
     secretKey: CLICKHOUSE_HOST
   - remoteRef:
