--- a/charts/attestation-api/values.yaml
+++ b/charts/attestation-api/values.yaml
@@ -40,6 +40,7 @@ env:
   DEV_LICENSE: "0x52fD9Dc294066792785CcD85eFB9A0Bd48DE01E4"
   FETCH_GRPC_ADDR: fetch-api-dev:8086
   DIMO_REGISTRY_CHAIN_ID: 80002
+  DEV_LICENSE_REDIRECT_URL: "http://127.0.0.1:10000"
 
   AUTOPI_DATA_TYPE: Twilio_1.0
   AUTOPI_BUCKET_NAME: dimo-network-connectivity-dev
@@ -47,7 +48,7 @@ env:
   HASHDOG_BUCKET_NAME: dimo-network-connectivity-dev
   STATUS_DATA_TYPE: Status_1.0
   STATUS_BUCKET_NAME: dimo-network-status-dev
-  VINVC_DATA_TYPE: VINVCv1.0
+  VIN_DATA_VERSION: vin/v1.0
   POMVC_DATA_TYPE: POMVCv1.0
   
   # TODO (kevin): Remove with smartcar deprecation
